myparser.output
Terminals unused in grammar

    KW_FOR
    KW_BREAK
    KW_ENDCOMP
    KW_IN
    KW_CONTINUE
    KW_OF
    KW_ENDFOR
    KW_WHILE
    KW_ENDWHILE
    KW_COMP


State 101 conflicts: 2 shift/reduce
State 134 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: main_block
    2        | function_blocks main_block
    3        | var_declarations function_blocks main_block
    4        | const_declarations var_declarations function_blocks main_block

    5 main_block: KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | KW_DEF KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'

    7 function_blocks: function_block ';'
    8                | function_blocks function_block ';'

    9 function_block: KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

   11 listofexpr: expr
   12           | listofexpr expr

   13 expr: TK_CONSTINT
   14     | TK_CONSTFLOAT
   15     | TK_IDENT
   16     | expr KW_OR expr
   17     | expr KW_AND expr
   18     | KW_NOT expr
   19     | expr TK_NOTEQ expr
   20     | expr TK_EQEQ expr
   21     | expr TK_LESEQ expr
   22     | expr TK_GREEQ expr
   23     | expr '<' expr
   24     | expr '>' expr
   25     | expr '+' expr
   26     | expr '-' expr
   27     | expr '*' expr
   28     | expr '/' expr
   29     | expr '%' expr
   30     | expr TK_POW expr
   31     | '-' expr
   32     | '+' expr
   33     | '(' expr ')'
   34     | TK_IDENT '[' expr ']'
   35     | expr '.' expr

   36 listofinstructions: var_declarations const_declarations statements
   37                   | const_declarations var_declarations statements
   38                   | statements

   39 statements: statement
   40           | statements statement

   41 statement: TK_IDENT '=' listofexpr ';'
   42          | TK_IDENT TK_PLUEQ expr ';'
   43          | TK_IDENT TK_MINEQ expr ';'
   44          | TK_IDENT TK_MULEQ expr ';'
   45          | TK_IDENT TK_MODEQ expr ';'
   46          | TK_IDENT TK_DIVEQ expr ';'
   47          | TK_IDENT TK_COLEQ expr ';'
   48          | if_statement ';'

   49 if_statement: KW_IF '(' listofexpr ')' ':' statements KW_ENDIF
   50             | KW_IF '(' listofexpr ')' ':' statements KW_ELSE ':' statements KW_ENDIF

   51 const_declarations: const_declaration ';'
   52                   | const_declarations const_declaration ';'

   53 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN

   58 var_declarations: var_declaration ';'
   59                 | var_declarations var_declaration ';'

   60 var_declaration: TK_IDENT ':' data_type

   61 data_type: KW_INTEGER
   62          | KW_SCALAR
   63          | KW_STR
   64          | KW_BOOLEAN


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 29
    '(' (40) 5 6 9 10 33 49 50
    ')' (41) 5 6 9 10 33 49 50
    '*' (42) 27
    '+' (43) 25 32
    '-' (45) 26 31
    '.' (46) 35
    '/' (47) 28
    ':' (58) 5 6 9 10 49 50 53 54 55 56 57 60
    ';' (59) 5 6 7 8 10 41 42 43 44 45 46 47 48 51 52 58 59
    '<' (60) 23
    '=' (61) 41 53 54 55 56 57
    '>' (62) 24
    '[' (91) 34
    ']' (93) 34
    error (256)
    TK_IDENT <str> (258) 9 10 15 34 41 42 43 44 45 46 47 53 54 55 56 57 60
    TK_CONSTINT <str> (259) 13 54
    TK_CONSTFLOAT <str> (260) 14 53
    TK_CONSTSTR <str> (261) 55
    TK_POW (262) 30
    TK_PLUEQ (263) 42
    TK_MINEQ (264) 43
    TK_MULEQ (265) 44
    TK_DIVEQ (266) 46
    TK_MODEQ (267) 45
    TK_EQEQ (268) 20
    TK_NOTEQ (269) 19
    TK_GREEQ (270) 22
    TK_LESEQ (271) 21
    TK_COLEQ (272) 47
    KW_AND (273) 17
    KW_OR (274) 16
    KW_NOT (275) 18
    KW_INTEGER (276) 54 61
    KW_FOR (277)
    KW_BREAK (278)
    KW_DEF (279) 5 6 9 10
    KW_ENDCOMP (280)
    KW_SCALAR (281) 53 62
    KW_CONST (282) 53 54 55 56 57
    KW_IN (283)
    KW_CONTINUE (284)
    KW_ENDDEF (285) 5 6 9 10
    KW_OF (286)
    KW_STR (287) 55 63
    KW_IF (288) 49 50
    KW_ENDFOR (289)
    KW_MAIN (290) 5 6
    KW_BOOLEAN (291) 56 57 64
    KW_ELSE (292) 50
    KW_WHILE (293)
    KW_RETURN (294) 10
    KW_ENDIF (295) 49 50
    KW_ENDWHILE (296)
    KW_COMP (297)
    KW_TRUE (298) 56
    KW_FALSE (299) 57
    UMINUS (300)
    UPLUS (301)


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program (63)
        on left: 1 2 3 4
        on right: 0
    main_block <str> (64)
        on left: 5 6
        on right: 1 2 3 4
    function_blocks <str> (65)
        on left: 7 8
        on right: 2 3 4 8
    function_block <str> (66)
        on left: 9 10
        on right: 7 8
    listofexpr <str> (67)
        on left: 11 12
        on right: 12 41 49 50
    expr <str> (68)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
        on right: 11 12 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 42 43 44 45 46 47
    listofinstructions <str> (69)
        on left: 36 37 38
        on right: 6 9 10
    statements <str> (70)
        on left: 39 40
        on right: 36 37 38 40 49 50
    statement <str> (71)
        on left: 41 42 43 44 45 46 47 48
        on right: 39 40
    if_statement <str> (72)
        on left: 49 50
        on right: 48
    const_declarations <str> (73)
        on left: 51 52
        on right: 4 36 37 52
    const_declaration <str> (74)
        on left: 53 54 55 56 57
        on right: 51 52
    var_declarations <str> (75)
        on left: 58 59
        on right: 3 4 36 37 59
    var_declaration <str> (76)
        on left: 60
        on right: 58 59
    data_type <str> (77)
        on left: 61 62 63 64
        on right: 60


State 0

    0 $accept: . program $end
    1 program: . main_block
    2        | . function_blocks main_block
    3        | . var_declarations function_blocks main_block
    4        | . const_declarations var_declarations function_blocks main_block
    5 main_block: . KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | . KW_DEF KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'
    7 function_blocks: . function_block ';'
    8                | . function_blocks function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF
   51 const_declarations: . const_declaration ';'
   52                   | . const_declarations const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   58 var_declarations: . var_declaration ';'
   59                 | . var_declarations var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_DEF    shift, and go to state 2
    KW_CONST  shift, and go to state 3

    program             go to state 4
    main_block          go to state 5
    function_blocks     go to state 6
    function_block      go to state 7
    const_declarations  go to state 8
    const_declaration   go to state 9
    var_declarations    go to state 10
    var_declaration     go to state 11


State 1

   60 var_declaration: TK_IDENT . ':' data_type

    ':'  shift, and go to state 12


State 2

    5 main_block: KW_DEF . KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | KW_DEF . KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'
    9 function_block: KW_DEF . TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | KW_DEF . TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    TK_IDENT  shift, and go to state 13
    KW_MAIN   shift, and go to state 14


State 3

   53 const_declaration: KW_CONST . TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | KW_CONST . TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | KW_CONST . TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | KW_CONST . TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | KW_CONST . TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN

    TK_IDENT  shift, and go to state 15


State 4

    0 $accept: program . $end

    $end  shift, and go to state 16


State 5

    1 program: main_block .

    $default  reduce using rule 1 (program)


State 6

    2 program: function_blocks . main_block
    5 main_block: . KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | . KW_DEF KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'
    8 function_blocks: function_blocks . function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    KW_DEF  shift, and go to state 2

    main_block      go to state 17
    function_block  go to state 18


State 7

    7 function_blocks: function_block . ';'

    ';'  shift, and go to state 19


State 8

    4 program: const_declarations . var_declarations function_blocks main_block
   52 const_declarations: const_declarations . const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   58 var_declarations: . var_declaration ';'
   59                 | . var_declarations var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_CONST  shift, and go to state 3

    const_declaration  go to state 20
    var_declarations   go to state 21
    var_declaration    go to state 11


State 9

   51 const_declarations: const_declaration . ';'

    ';'  shift, and go to state 22


State 10

    3 program: var_declarations . function_blocks main_block
    7 function_blocks: . function_block ';'
    8                | . function_blocks function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF
   59 var_declarations: var_declarations . var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_DEF    shift, and go to state 23

    function_blocks  go to state 24
    function_block   go to state 7
    var_declaration  go to state 25


State 11

   58 var_declarations: var_declaration . ';'

    ';'  shift, and go to state 26


State 12

   60 var_declaration: TK_IDENT ':' . data_type
   61 data_type: . KW_INTEGER
   62          | . KW_SCALAR
   63          | . KW_STR
   64          | . KW_BOOLEAN

    KW_INTEGER  shift, and go to state 27
    KW_SCALAR   shift, and go to state 28
    KW_STR      shift, and go to state 29
    KW_BOOLEAN  shift, and go to state 30

    data_type  go to state 31


State 13

    9 function_block: KW_DEF TK_IDENT . '(' ')' ':' listofinstructions KW_ENDDEF
   10               | KW_DEF TK_IDENT . '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    '('  shift, and go to state 32


State 14

    5 main_block: KW_DEF KW_MAIN . '(' ')' ':' KW_ENDDEF ';'
    6           | KW_DEF KW_MAIN . '(' ')' ':' listofinstructions KW_ENDDEF ';'

    '('  shift, and go to state 33


State 15

   53 const_declaration: KW_CONST TK_IDENT . '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | KW_CONST TK_IDENT . '=' TK_CONSTINT ':' KW_INTEGER
   55                  | KW_CONST TK_IDENT . '=' TK_CONSTSTR ':' KW_STR
   56                  | KW_CONST TK_IDENT . '=' KW_TRUE ':' KW_BOOLEAN
   57                  | KW_CONST TK_IDENT . '=' KW_FALSE ':' KW_BOOLEAN

    '='  shift, and go to state 34


State 16

    0 $accept: program $end .

    $default  accept


State 17

    2 program: function_blocks main_block .

    $default  reduce using rule 2 (program)


State 18

    8 function_blocks: function_blocks function_block . ';'

    ';'  shift, and go to state 35


State 19

    7 function_blocks: function_block ';' .

    $default  reduce using rule 7 (function_blocks)


State 20

   52 const_declarations: const_declarations const_declaration . ';'

    ';'  shift, and go to state 36


State 21

    4 program: const_declarations var_declarations . function_blocks main_block
    7 function_blocks: . function_block ';'
    8                | . function_blocks function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF
   59 var_declarations: var_declarations . var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_DEF    shift, and go to state 23

    function_blocks  go to state 37
    function_block   go to state 7
    var_declaration  go to state 25


State 22

   51 const_declarations: const_declaration ';' .

    $default  reduce using rule 51 (const_declarations)


State 23

    9 function_block: KW_DEF . TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | KW_DEF . TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    TK_IDENT  shift, and go to state 13


State 24

    3 program: var_declarations function_blocks . main_block
    5 main_block: . KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | . KW_DEF KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'
    8 function_blocks: function_blocks . function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    KW_DEF  shift, and go to state 2

    main_block      go to state 38
    function_block  go to state 18


State 25

   59 var_declarations: var_declarations var_declaration . ';'

    ';'  shift, and go to state 39


State 26

   58 var_declarations: var_declaration ';' .

    $default  reduce using rule 58 (var_declarations)


State 27

   61 data_type: KW_INTEGER .

    $default  reduce using rule 61 (data_type)


State 28

   62 data_type: KW_SCALAR .

    $default  reduce using rule 62 (data_type)


State 29

   63 data_type: KW_STR .

    $default  reduce using rule 63 (data_type)


State 30

   64 data_type: KW_BOOLEAN .

    $default  reduce using rule 64 (data_type)


State 31

   60 var_declaration: TK_IDENT ':' data_type .

    $default  reduce using rule 60 (var_declaration)


State 32

    9 function_block: KW_DEF TK_IDENT '(' . ')' ':' listofinstructions KW_ENDDEF
   10               | KW_DEF TK_IDENT '(' . ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    ')'  shift, and go to state 40


State 33

    5 main_block: KW_DEF KW_MAIN '(' . ')' ':' KW_ENDDEF ';'
    6           | KW_DEF KW_MAIN '(' . ')' ':' listofinstructions KW_ENDDEF ';'

    ')'  shift, and go to state 41


State 34

   53 const_declaration: KW_CONST TK_IDENT '=' . TK_CONSTFLOAT ':' KW_SCALAR
   54                  | KW_CONST TK_IDENT '=' . TK_CONSTINT ':' KW_INTEGER
   55                  | KW_CONST TK_IDENT '=' . TK_CONSTSTR ':' KW_STR
   56                  | KW_CONST TK_IDENT '=' . KW_TRUE ':' KW_BOOLEAN
   57                  | KW_CONST TK_IDENT '=' . KW_FALSE ':' KW_BOOLEAN

    TK_CONSTINT    shift, and go to state 42
    TK_CONSTFLOAT  shift, and go to state 43
    TK_CONSTSTR    shift, and go to state 44
    KW_TRUE        shift, and go to state 45
    KW_FALSE       shift, and go to state 46


State 35

    8 function_blocks: function_blocks function_block ';' .

    $default  reduce using rule 8 (function_blocks)


State 36

   52 const_declarations: const_declarations const_declaration ';' .

    $default  reduce using rule 52 (const_declarations)


State 37

    4 program: const_declarations var_declarations function_blocks . main_block
    5 main_block: . KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF ';'
    6           | . KW_DEF KW_MAIN '(' ')' ':' listofinstructions KW_ENDDEF ';'
    8 function_blocks: function_blocks . function_block ';'
    9 function_block: . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_ENDDEF
   10               | . KW_DEF TK_IDENT '(' ')' ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    KW_DEF  shift, and go to state 2

    main_block      go to state 47
    function_block  go to state 18


State 38

    3 program: var_declarations function_blocks main_block .

    $default  reduce using rule 3 (program)


State 39

   59 var_declarations: var_declarations var_declaration ';' .

    $default  reduce using rule 59 (var_declarations)


State 40

    9 function_block: KW_DEF TK_IDENT '(' ')' . ':' listofinstructions KW_ENDDEF
   10               | KW_DEF TK_IDENT '(' ')' . ':' listofinstructions KW_RETURN ';' KW_ENDDEF

    ':'  shift, and go to state 48


State 41

    5 main_block: KW_DEF KW_MAIN '(' ')' . ':' KW_ENDDEF ';'
    6           | KW_DEF KW_MAIN '(' ')' . ':' listofinstructions KW_ENDDEF ';'

    ':'  shift, and go to state 49


State 42

   54 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTINT . ':' KW_INTEGER

    ':'  shift, and go to state 50


State 43

   53 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTFLOAT . ':' KW_SCALAR

    ':'  shift, and go to state 51


State 44

   55 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTSTR . ':' KW_STR

    ':'  shift, and go to state 52


State 45

   56 const_declaration: KW_CONST TK_IDENT '=' KW_TRUE . ':' KW_BOOLEAN

    ':'  shift, and go to state 53


State 46

   57 const_declaration: KW_CONST TK_IDENT '=' KW_FALSE . ':' KW_BOOLEAN

    ':'  shift, and go to state 54


State 47

    4 program: const_declarations var_declarations function_blocks main_block .

    $default  reduce using rule 4 (program)


State 48

    9 function_block: KW_DEF TK_IDENT '(' ')' ':' . listofinstructions KW_ENDDEF
   10               | KW_DEF TK_IDENT '(' ')' ':' . listofinstructions KW_RETURN ';' KW_ENDDEF
   36 listofinstructions: . var_declarations const_declarations statements
   37                   | . const_declarations var_declarations statements
   38                   | . statements
   39 statements: . statement
   40           | . statements statement
   41 statement: . TK_IDENT '=' listofexpr ';'
   42          | . TK_IDENT TK_PLUEQ expr ';'
   43          | . TK_IDENT TK_MINEQ expr ';'
   44          | . TK_IDENT TK_MULEQ expr ';'
   45          | . TK_IDENT TK_MODEQ expr ';'
   46          | . TK_IDENT TK_DIVEQ expr ';'
   47          | . TK_IDENT TK_COLEQ expr ';'
   48          | . if_statement ';'
   49 if_statement: . KW_IF '(' listofexpr ')' ':' statements KW_ENDIF
   50             | . KW_IF '(' listofexpr ')' ':' statements KW_ELSE ':' statements KW_ENDIF
   51 const_declarations: . const_declaration ';'
   52                   | . const_declarations const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   58 var_declarations: . var_declaration ';'
   59                 | . var_declarations var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 55
    KW_CONST  shift, and go to state 3
    KW_IF     shift, and go to state 56

    listofinstructions  go to state 57
    statements          go to state 58
    statement           go to state 59
    if_statement        go to state 60
    const_declarations  go to state 61
    const_declaration   go to state 9
    var_declarations    go to state 62
    var_declaration     go to state 11


State 49

    5 main_block: KW_DEF KW_MAIN '(' ')' ':' . KW_ENDDEF ';'
    6           | KW_DEF KW_MAIN '(' ')' ':' . listofinstructions KW_ENDDEF ';'
   36 listofinstructions: . var_declarations const_declarations statements
   37                   | . const_declarations var_declarations statements
   38                   | . statements
   39 statements: . statement
   40           | . statements statement
   41 statement: . TK_IDENT '=' listofexpr ';'
   42          | . TK_IDENT TK_PLUEQ expr ';'
   43          | . TK_IDENT TK_MINEQ expr ';'
   44          | . TK_IDENT TK_MULEQ expr ';'
   45          | . TK_IDENT TK_MODEQ expr ';'
   46          | . TK_IDENT TK_DIVEQ expr ';'
   47          | . TK_IDENT TK_COLEQ expr ';'
   48          | . if_statement ';'
   49 if_statement: . KW_IF '(' listofexpr ')' ':' statements KW_ENDIF
   50             | . KW_IF '(' listofexpr ')' ':' statements KW_ELSE ':' statements KW_ENDIF
   51 const_declarations: . const_declaration ';'
   52                   | . const_declarations const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   58 var_declarations: . var_declaration ';'
   59                 | . var_declarations var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT   shift, and go to state 55
    KW_CONST   shift, and go to state 3
    KW_ENDDEF  shift, and go to state 63
    KW_IF      shift, and go to state 56

    listofinstructions  go to state 64
    statements          go to state 58
    statement           go to state 59
    if_statement        go to state 60
    const_declarations  go to state 61
    const_declaration   go to state 9
    var_declarations    go to state 62
    var_declaration     go to state 11


State 50

   54 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTINT ':' . KW_INTEGER

    KW_INTEGER  shift, and go to state 65


State 51

   53 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' . KW_SCALAR

    KW_SCALAR  shift, and go to state 66


State 52

   55 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTSTR ':' . KW_STR

    KW_STR  shift, and go to state 67


State 53

   56 const_declaration: KW_CONST TK_IDENT '=' KW_TRUE ':' . KW_BOOLEAN

    KW_BOOLEAN  shift, and go to state 68


State 54

   57 const_declaration: KW_CONST TK_IDENT '=' KW_FALSE ':' . KW_BOOLEAN

    KW_BOOLEAN  shift, and go to state 69


State 55

   41 statement: TK_IDENT . '=' listofexpr ';'
   42          | TK_IDENT . TK_PLUEQ expr ';'
   43          | TK_IDENT . TK_MINEQ expr ';'
   44          | TK_IDENT . TK_MULEQ expr ';'
   45          | TK_IDENT . TK_MODEQ expr ';'
   46          | TK_IDENT . TK_DIVEQ expr ';'
   47          | TK_IDENT . TK_COLEQ expr ';'
   60 var_declaration: TK_IDENT . ':' data_type

    TK_PLUEQ  shift, and go to state 70
    TK_MINEQ  shift, and go to state 71
    TK_MULEQ  shift, and go to state 72
    TK_DIVEQ  shift, and go to state 73
    TK_MODEQ  shift, and go to state 74
    TK_COLEQ  shift, and go to state 75
    '='       shift, and go to state 76
    ':'       shift, and go to state 12


State 56

   49 if_statement: KW_IF . '(' listofexpr ')' ':' statements KW_ENDIF
   50             | KW_IF . '(' listofexpr ')' ':' statements KW_ELSE ':' statements KW_ENDIF

    '('  shift, and go to state 77


State 57

    9 function_block: KW_DEF TK_IDENT '(' ')' ':' listofinstructions . KW_ENDDEF
   10               | KW_DEF TK_IDENT '(' ')' ':' listofinstructions . KW_RETURN ';' KW_ENDDEF

    KW_ENDDEF  shift, and go to state 78
    KW_RETURN  shift, and go to state 79


State 58

   38 listofinstructions: statements .  [KW_ENDDEF, KW_RETURN]
   40 statements: statements . statement
   41 statement: . TK_IDENT '=' listofexpr ';'
   42          | . TK_IDENT TK_PLUEQ expr ';'
   43          | . TK_IDENT TK_MINEQ expr ';'
   44          | . TK_IDENT TK_MULEQ expr ';'
   45          | . TK_IDENT TK_MODEQ expr ';'
   46          | . TK_IDENT TK_DIVEQ expr ';'
   47          | . TK_IDENT TK_COLEQ expr ';'
   48          | . if_statement ';'
   49 if_statement: . KW_IF '(' listofexpr ')' ':' statements KW_ENDIF
   50             | . KW_IF '(' listofexpr ')' ':' statements KW_ELSE ':' statements KW_ENDIF

    TK_IDENT  shift, and go to state 80
    KW_IF     shift, and go to state 56

    $default  reduce using rule 38 (listofinstructions)

    statement     go to state 81
    if_statement  go to state 60


State 59

   39 statements: statement .

    $default  reduce using rule 39 (statements)


State 60

   48 statement: if_statement . ';'

    ';'  shift, and go to state 82


State 61

   37 listofinstructions: const_declarations . var_declarations statements
   52 const_declarations: const_declarations . const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   58 var_declarations: . var_declaration ';'
   59                 | . var_declarations var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_CONST  shift, and go to state 3

    const_declaration  go to state 20
    var_declarations   go to state 83
    var_declaration    go to state 11


State 62

   36 listofinstructions: var_declarations . const_declarations statements
   51 const_declarations: . const_declaration ';'
   52                   | . const_declarations const_declaration ';'
   53 const_declaration: . KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR
   54                  | . KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER
   55                  | . KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR
   56                  | . KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN
   57                  | . KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN
   59 var_declarations: var_declarations . var_declaration ';'
   60 var_declaration: . TK_IDENT ':' data_type

    TK_IDENT  shift, and go to state 1
    KW_CONST  shift, and go to state 3

    const_declarations  go to state 84
    const_declaration   go to state 9
    var_declaration     go to state 25


State 63

    5 main_block: KW_DEF KW_MAIN '(' ')' ':' KW_ENDDEF . ';'

    ';'  shift, and go to state 85


State 64

    6 main_block: KW_DEF KW_MAIN '(' ')' ':' listofinstructions . KW_ENDDEF ';'

    KW_ENDDEF  shift, and go to state 86


State 65

   54 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTINT ':' KW_INTEGER .

    $default  reduce using rule 54 (const_declaration)


State 66

   53 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTFLOAT ':' KW_SCALAR .

    $default  reduce using rule 53 (const_declaration)


State 67

   55 const_declaration: KW_CONST TK_IDENT '=' TK_CONSTSTR ':' KW_STR .

    $default  reduce using rule 55 (const_declaration)


State 68

   56 const_declaration: KW_CONST TK_IDENT '=' KW_TRUE ':' KW_BOOLEAN .

    $default  reduce using rule 56 (const_declaration)


State 69

   57 const_declaration: KW_CONST TK_IDENT '=' KW_FALSE ':' KW_BOOLEAN .

    $default  reduce using rule 57 (const_declaration)


State 70

   13 expr: . TK_CONSTINT
   14     | . TK_CONSTFLOAT
   15     | . TK_IDENT
   16     | . expr KW_OR expr
   17     | . expr KW_AND expr
   18     | . KW_NOT expr
   19     | . expr TK_NOTEQ expr
   20     | . expr TK_EQEQ expr
   21     | . expr TK_LESEQ expr
   22     | . expr TK_GREEQ expr
   23     | . expr '<' expr
   24     | . expr '>' expr
   25     | . expr '+' expr
   26     | . expr '-' expr
   27     | . expr '*' expr
   28     | . expr '/' expr
   29     | . expr '%' expr
   30     | . expr TK_POW expr
   31     | . '-' expr
   32     | . '+' expr
   33     | . '(' expr ')'
   34     | . TK_IDENT '[' expr ']'
   35     | . expr '.' expr
   42 statement: TK_IDENT TK_PLUEQ . expr ';'

    TK_IDENT       shift, and go to state 87
    TK_CONSTINT    shift, and go to state 88
    TK_CONSTFLOAT  shift, and go to state 89
    KW_NOT         shift, and go to state 90
    '+'            shift, and go to state 91
    '-'            shift, and go to state 92
    '('            shift, and go to state 93

    expr  go to state 94


State 71

   13 expr: . TK_CONSTINT
   14     | . TK_CONSTFLOAT
   15     | . TK_IDENT
   16     | . expr KW_OR expr
   17     | . expr KW_AND expr
   18     | . KW_NOT expr
   19     | . expr TK_NOTEQ expr
   20     | . expr TK_EQEQ expr
   21     | . expr TK_LESEQ expr
   22     | . expr TK_GREEQ expr
   23     | . expr '<' expr
   24     | . expr '>' expr
   25     | . expr '+' expr
   26     | . expr '-' expr
   27     | . expr '*' expr
   28     | . expr '/' expr
   29     | . expr '%' expr
   30     | . expr TK_POW expr
   31     | . '-' expr
   32     | . '+' expr
   33     | . '(' expr ')'
   34     | . TK_IDENT '[' expr ']'
   35     | . expr '.' expr
   43 statement: TK_IDENT TK_MINEQ . expr ';'

    TK_IDENT       shift, and go to state 87
    TK_CONSTINT    shift, and go to state 88
    TK_CONSTFLOAT  shift, and go to state 89
    KW_NOT         shift, and go to state 90
    '+'            shift, and go to state 91
    '-'            shift, and go to state 92
    '('            shift, and go to state 93

    expr  go to state 95


State 72
